js/js.translator/testData/incremental/invalidation/wasmJsInterop/main/l.kt
fun jsFunction(): String = js("'O'")

@JsFun("() => 'K'")
external fun jsFunFunction(): String